HDFS-8202. Merging change 1305704 from trunk to 0.23.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1305723 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -178,6 +178,9 @@ Release 0.23.3 - UNRELEASED
 
     HADOOP-8204. TestHealthMonitor fails occasionally (todd)
 
+    HADOOP-8202. RPC stopProxy() does not close the proxy correctly.
+    (Hari Mankude via suresh)
+
   BREAKDOWN OF HADOOP-7454 SUBTASKS
 
     HADOOP-7455. HA: Introduce HA Service Protocol Interface. (suresh)
