HADOOP-8216. svn merge -c 1305891 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1305892 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -117,6 +117,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8212. Improve ActiveStandbyElector's behavior when session expires
     (todd)
 
+    HADOOP-8216. Address log4j.properties inconsistencies btw main and
+    template dirs. (Patrick Hunt via eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
