--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -260,6 +260,8 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-3156. TestDFSHAAdmin is failing post HADOOP-8202. (atm)
 
+    HDFS-3143. TestGetBlocks.testGetBlocks is failing. (Arpit Gupta via atm)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
