svn merge -c 1306582 from trunk for HDFS-3155. Clean up FSDataset implemenation related code.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1306585 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -175,6 +175,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3129. NetworkTopology: add test that getLeaf should check for
     invalid topologies. (Colin Patrick McCabe via eli)
 
+    HDFS-3155. Clean up FSDataset implemenation related code.  (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
