--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -672,6 +672,9 @@ Release 0.23.2 - UNRELEASED
 
     HDFS-3101. Cannot read empty file using WebHDFS.  (szetszwo)
 
+    HDFS-3160. httpfs should exec catalina instead of forking it.
+    (Roman Shaposhnik via eli)
+
 Release 0.23.1 - 2012-02-17 
 
   INCOMPATIBLE CHANGES
