svn merge -c 1306901 from trunk to branch-2 FIXES: MAPREDUCE-4081. TestMROutputFormat.java does not compile (Jason Lowe via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1306905 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -89,6 +89,9 @@ Release 2.0.0 - UNRELEASED
     MAPREDUCE-3377. Added a unit test to ensure OutputCommitter.checkOutputSpecs 
     is called prior to copying job.xml. (Jane Chen via acmurthy) 
 
+    MAPREDUCE-4081. TestMROutputFormat.java does not compile (Jason Lowe via
+    bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
