MAPREDUCE-3989. svn merge -c 1307102 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1307103 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -135,6 +135,9 @@ Release 0.23.2 - UNRELEASED
     MAPREDUCE-4043. Secret keys set in Credentials are not seen by tasks
     (Jason Lowe via bobby) 
 
+    MAPREDUCE-3989. Cap space usage of default log4j rolling policy.
+    (Patrick Hunt via eli)
+
   OPTIMIZATIONS
 
     MAPREDUCE-3901. Modified JobHistory records in YARN to lazily load job and
