HDFS-3172. svn merge -c 1307888 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1307889 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -184,6 +184,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3158. LiveNodes member of NameNodeMXBean should list non-DFS used
     space and capacity per DN. (atm)
 
+    HDFS-3172. dfs.upgrade.permission is dead code. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
