HADOOP-8211. svn merge -c 1308006 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1308007 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -123,6 +123,8 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8149. Cap space usage of default log4j rolling policy.
     (Patrick Hunt via eli)
 
+    HADOOP-8211. Update commons-net version to 3.1. (eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
