HADOOP-8199. Fix issues in start-all.sh and stop-all.sh Contributed by Devaraj K.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1308182 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -129,6 +129,8 @@ Release 2.0.0 - UNRELEASED
 
   BUG FIXES
 
+    HADOOP-8199. Fix issues in start-all.sh and stop-all.sh (Devaraj K via umamahesh)
+
     HADOOP-7900. LocalDirAllocator confChanged() accesses conf.get() twice
     (Ravi Gummadi via Uma Maheswara Rao G)
 
