HDFS-3174. svn merge -c 1308226 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1308227 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -288,6 +288,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-2995. start-dfs.sh should only start the 2NN for namenodes
     with dfs.namenode.secondary.http-address configured. (eli)
 
+    HDFS-3174. Fix assert in TestPendingDataNodeMessages. (eli)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
