--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -116,6 +116,9 @@ Release 0.23.3 - UNRELEASED
 
     MAPREDUCE-4089. Hung Tasks never time out. (Robert Evans via tgraves)
 
+    MAPREDUCE-4024. RM webservices can't query on finalStatus (Tom Graves
+    via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
