--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -70,7 +70,8 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-3167. CLI-based driver for MiniDFSCluster. (Henry Robinson via atm)
 
-    HDFS-3120. Enable hsync and hflush by default. (eli)
+    HDFS-3148. The client should be able to use multiple local interfaces
+    for data transfer. (eli)
 
   IMPROVEMENTS
 
@@ -197,6 +198,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3144. Refactor DatanodeID#getName by use. (eli)
 
     HDFS-3130. Move fsdataset implementation to a package.  (szetszwo)
+
+    HDFS-3120. Enable hsync and hflush by default. (eli)
 
   OPTIMIZATIONS
 
