svn merge -c 1308925 from trunk.  FIXES MAPREDUCE-4060. Multiple SLF4J binding warning (Jason Lowe via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1308930 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -119,6 +119,8 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4024. RM webservices can't query on finalStatus (Tom Graves
     via bobby)
 
+    MAPREDUCE-4060. Multiple SLF4J binding warning (Jason Lowe via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
