--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -121,6 +121,9 @@ Release 0.23.3 - UNRELEASED
 
     MAPREDUCE-4060. Multiple SLF4J binding warning (Jason Lowe via bobby)
 
+    MAPREDUCE-3983. TestTTResourceReporting can fail, and should just be
+    deleted (Ravi Prakash via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
