MAPREDUCE-4062. AM Launcher thread can hang forever (tgraves via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1309044 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -127,6 +127,8 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4012 Hadoop Job setup error leaves no useful info to users 
     (when LinuxTaskController is used). (tgraves)
 
+    MAPREDUCE-4062. AM Launcher thread can hang forever (tgraves via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
