--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -627,7 +627,10 @@ Release 0.23.3 - UNRELEASED
 
     HDFS-3166. Add timeout to Hftp connections.  (Daryn Sharp via szetszwo)
 
-Release 0.23.2 - UNRELEASED 
+    HDFS-3176. Use MD5MD5CRC32FileChecksum.readFields() in JsonUtil .  (Kihwal
+    Lee via szetszwo)
+
+Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
 
