svn merge -c 1309453 from trunk FIXES: MAPREDUCE-3082. Archive command take wrong path for input file with current directory (John George via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1309454 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -149,6 +149,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-3682 Tracker URL says AM tasks run on localhost.
     (Ravi Prakash via tgraves)
 
+    MAPREDUCE-3082. Archive command take wrong path for input file with current
+    directory (John George via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
