svn merge -c 1309481 FIXES: MAPREDUCE-3650. testGetTokensForHftpFS() fails (Ravi Prakash via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1309482 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -152,6 +152,7 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-3082. Archive command take wrong path for input file with current
     directory (John George via bobby)
 
+    MAPREDUCE-3650. testGetTokensForHftpFS() fails (Ravi Prakash via bobby)
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
