--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -317,6 +317,8 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-3199. TestValidateConfigurationSettings is failing. (todd via eli)
 
+    HDFS-3202. NamespaceInfo PB translation drops build version. (atm)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
