--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -105,6 +105,9 @@ Release 2.0.0 - UNRELEASED
 
     MAPREDUCE-4097. tools testcases fail because missing mrapp-generated-classpath 
     file in classpath (rvs via tucu)
+
+    MAPREDUCE-4113. Fix tests org.apache.hadoop.mapred.TestClusterMRNotification
+    (Devaraj K via bobby)
  
 Release 0.23.3 - UNRELEASED
 
