--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -108,6 +108,9 @@ Release 2.0.0 - UNRELEASED
 
     MAPREDUCE-4113. Fix tests org.apache.hadoop.mapred.TestClusterMRNotification
     (Devaraj K via bobby)
+
+    MAPREDUCE-4112. Fix tests org.apache.hadoop.mapred.TestClusterMapReduceTestCase
+    (Devaraj K via bobby)
  
 Release 0.23.3 - UNRELEASED
 
