svn merge -c 1310431 from trunk.  FIXES: MAPREDUCE-4111. Fix tests in org.apache.hadoop.mapred.TestJobName (Devaraj K via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1310432 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -111,6 +111,9 @@ Release 2.0.0 - UNRELEASED
 
     MAPREDUCE-4112. Fix tests org.apache.hadoop.mapred.TestClusterMapReduceTestCase
     (Devaraj K via bobby)
+
+    MAPREDUCE-4111. Fix tests in org.apache.hadoop.mapred.TestJobName (Devaraj
+    K via bobby)
  
 Release 0.23.3 - UNRELEASED
 
