svn merge -c 1310528 from trunk. FIXES: MAPREDUCE-4051. Remove the empty hadoop-mapreduce-project/assembly/all.xml file (Ravi Prakash via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1310529 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -174,6 +174,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4073. CS assigns multiple off-switch containers when using
     multi-level-queues (Siddharth Seth via bobby)
 
+    MAPREDUCE-4051. Remove the empty hadoop-mapreduce-project/assembly/all.xml
+    file (Ravi Prakash via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
