--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -114,7 +114,11 @@ Release 2.0.0 - UNRELEASED
 
     MAPREDUCE-4111. Fix tests in org.apache.hadoop.mapred.TestJobName (Devaraj
     K via bobby)
- 
+
+    MAPREDUCE-4110. Fix tests in org.apache.hadoop.mapred.TestMiniMRClasspath &
+    org.apache.hadoop.mapred.TestMiniMRWithDFSWithDistinctUsers (Devaraj K via
+    bobby)
+
 Release 0.23.3 - UNRELEASED
 
   INCOMPATIBLE CHANGES
