svn merge -c 1310522 from trunk for HDFS-2505. Add a test to verify getFileChecksum(..) with ViewFS.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1310570 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -658,6 +658,9 @@ Release 0.23.3 - UNRELEASED
 
   IMPROVEMENTS
 
+    HDFS-2505. Add a test to verify getFileChecksum(..) with ViewFS.  (Ravi
+    Prakash via szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
