HDFS-3226. Allow GetConf tool to print arbitrary keys. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1310647 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -222,6 +222,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3204. Minor modification to JournalProtocol.proto to make
     it generic. (suresh)
 
+    HDFS-3226. Allow GetConf tool to print arbitrary keys (todd)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
