--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -181,6 +181,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4051. Remove the empty hadoop-mapreduce-project/assembly/all.xml
     file (Ravi Prakash via bobby)
 
+    MAPREDUCE-4117. mapred job -status throws NullPointerException (Devaraj K
+    via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
