--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -225,6 +225,8 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8261. Har file system doesn't deal with FS URIs with a host but no
     port. (atm)
 
+    HADOOP-8263. Stringification of IPC calls not useful (todd)
+
   BREAKDOWN OF HADOOP-7454 SUBTASKS
 
     HADOOP-7455. HA: Introduce HA Service Protocol Interface. (suresh)
